[gd_scene load_steps=5 format=3 uid="uid://1hi2ijm5extc"]

[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_oabh7"]
[ext_resource type="PackedScene" uid="uid://c3wdulch1e2gq" path="res://scenes/laser/laser.tscn" id="1_thggs"]
[ext_resource type="PackedScene" uid="uid://414fe5rmqxl7" path="res://scenes/pipe/pipe.tscn" id="2_yt0c2"]
[ext_resource type="AudioStream" uid="uid://qld75tvv6amj" path="res://assets/audio/score.wav" id="3_lv5gv"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_oabh7")

[node name="Pipe" parent="." instance=ExtResource("2_yt0c2")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Pipe2" parent="." instance=ExtResource("2_yt0c2")]
position = Vector2(0, 80)

[node name="Laser" parent="." instance=ExtResource("1_thggs")]
position = Vector2(0, 1)

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lv5gv")
volume_db = -10.32

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(50, 1)

[connection signal="body_entered" from="Pipe" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Pipe2" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="notifier_screen_exited"]
